--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
 PORT=5000
-# MONGO_URL=mongodb://localhost:27017/b2b_crm
-MONGO_URL = mongodb+srv://projectinterpro:I3vtSXTH9CS8n0Ak@cluster0i.xntlwlc.mongodb.net/
+MONGO_URL=mongodb://localhost:27017/b2b_crm
+# MONGO_URL = mongodb+srv://projectinterpro:I3vtSXTH9CS8n0Ak@cluster0i.xntlwlc.mongodb.net/
 JWT_SECRET=supersecretkey
